[tool.poetry]
name = "station-editor"
version = "0.1.0"
description = ""
authors = ["CR1337 <captain_2@gmx.de>"]
readme = "README.md"
packages = [{include = "station_editor"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
