[tool.poetry]
name = "station-editor"
version = "0.1.0"
description = ""
authors = ["CR1337 <captain_2@gmx.de>"]
readme = "README.md"
packages = [{include = "station_editor"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}
planpro-importer = {git = "https://github.com/simulate-digital-rail/planpro-importer.git"}
orm-importer = {git = "https://github.com/simulate-digital-rail/orm-importer.git"}
cli-importer = {git = "https://github.com/simulate-digital-rail/cli-importer.git"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
